--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,4 +3,18 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
+@import "compass/reset/utilities";
+
+// let's us use all utilities/mixins for all css3 properties
+@import "compass/css3";
+
+// Base Styles
+
+@import "base";
+
+// Partials
+@import "reset";
+
+// Colored Squares
+
+@import "squares";
