--- a/css/screen.css
+++ b/css/screen.css
@@ -2,64 +2,30 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
+/* =16px */
 html {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-q, blockquote {
-  quotes: none;
-}
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-a img {
-  border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
+  font-size: 62.5%;
 }
 
 body {
   background-color: #232323;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.4;
+  font-size: 1.6rem;
+}
+
+/* =34px */
+h1 {
+  font-size: 3.4rem;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .flex-container {
@@ -69,24 +35,39 @@ body {
   justify-content: center;
   align-content: flex-start;
   align-items: flex-start;
-  max-width: 550px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 .flex-container .square {
-  width: 150px;
-  height: 125px;
+  width: 300px;
+  height: 250px;
   background: purple;
   padding-bottom: 16px 16px;
   margin: 10px;
 }
 
-#header {
+body {
+  margin: 0;
+}
+body #header {
   color: white;
-  height: 5em;
+  text-align: center;
+  background-color: #3399ff;
+  text-transform: uppercase;
+  margin: 0;
+  font-weight: 400;
+  padding: 1em 0;
+}
+body #color-display {
+  font-size: 150%;
+  font-weight: 600;
+}
+body #stripe {
+  background: white;
+  height: 4em;
+  text-align: center;
 }
 
-#stripe {
-  background: white;
-  height: 2em;
-  text-align: center;
+.selected {
+  background: blue;
 }
