--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,22 @@
-#header {
-  color: white;
-  height: 5em;
-}
+body {
+  margin: 0;
 
-#stripe {
-  background: white;
-  height: 2em;
-  text-align: center;
+  #header {
+    color: white;
+    text-align: center;
+    background-color: $blue;
+    text-transform: uppercase;
+    margin: 0;
+    font-weight: 400;
+    padding: 1em 0;
+  }
+  #color-display {
+    font-size: 150%;
+    font-weight: $header-font-weight;
+  }
+  #stripe {
+    background: white;
+    height: 4em;
+    text-align: center;
+  }
 }
