--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,16 +3,19 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
+// @import "compass/reset";
+
+// Let's use Compass Mixins for css3
+@import "compass/css3";
 
 // Base Styles
-
 @import "base";
 
-
 // Colored Squares
-
 @import "squares";
 
-// header
+// Header
 @import "header";
+
+// Buttons
+@import "buttons";
