--- a/sass/_squares.scss
+++ b/sass/_squares.scss
@@ -13,5 +13,8 @@
     background: purple;
     padding-bottom: 16px 16px;
     margin: 10px;
+    transition: background 0.5s;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
   }
 }
