--- a/sass/_squares.scss
+++ b/sass/_squares.scss
@@ -6,7 +6,7 @@
   align-content: flex-start;
   align-items: flex-start;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 3em auto;
   .square {
     width: 300px;
     height: 250px;
