--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -25,3 +25,9 @@ button {
      background-color: $blue;
    }
 }
+
+@media screen and (max-width: 550px){
+  button {
+      font-size: 1rem;
+    }
+}
