--- a/css/screen.css
+++ b/css/screen.css
@@ -69,10 +69,11 @@ body #message {
 
 @media screen and (max-width: 550px) {
   body #color-display {
-    font-size: 125%;
+    font-size: 118%;
   }
   body #message {
     font-size: 1.4rem;
+    width: 15%;
   }
 }
 .selected {
