--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,10 +28,11 @@ body {
 @media screen and (max-width: 550px){
   body {
     #color-display {
-      font-size: 125%;
+      font-size: 118%;
     }
     #message {
       font-size: 1.4rem;
+      width: 15%;
     }
   }
 }
