--- a/css/screen.css
+++ b/css/screen.css
@@ -20,22 +20,16 @@ h1 {
   font-size: 3.4rem;
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: flex-start;
-  align-items: flex-start;
-  max-width: 1000px;
+.squares-container {
+  max-width: 600px;
   margin: 3em auto;
 }
-.flex-container .square {
-  width: 300px;
-  height: 250px;
+.squares-container .square {
+  width: 30%;
+  float: left;
   background: purple;
-  padding-bottom: 16px 16px;
-  margin: 10px;
+  padding-bottom: 30%;
+  margin: 1.66%;
   transition: background 0.5s;
   -webkit-transition: background 0.5s;
   -moz-transition: background 0.5s;
