--- a/sass/_squares.scss
+++ b/sass/_squares.scss
@@ -1,18 +1,22 @@
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: flex-start;
-  align-items: flex-start;
-  max-width: 1000px;
+// .flex-container {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   align-content: flex-start;
+//   align-items: flex-start;
+//   max-width: 1000px;
+//   margin: 3em auto;
+
+.squares-container {
+  max-width: 600px;
   margin: 3em auto;
   .square {
-    width: 300px;
-    height: 250px;
+    width: 30%;
+    float: left;
     background: purple;
-    padding-bottom: 16px 16px;
-    margin: 10px;
+    padding-bottom: 30%;
+    margin: 1.66%;
     transition: background 0.5s;
     -webkit-transition: background 0.5s;
     -moz-transition: background 0.5s;
