--- a/sass/_squares.scss
+++ b/sass/_squares.scss
@@ -11,6 +11,7 @@
 .squares-container {
   max-width: 600px;
   margin: 3em auto;
+  margin-bottom: 3em;
   .square {
     width: 30%;
     float: left;
