add margin to bottom squares

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,7 +23,6 @@ h1 {
 .squares-container {
   max-width: 600px;
   margin: 3em auto;
-  padding-bottom: 3em;
 }
 .squares-container .square {
   width: 30%;
@@ -34,6 +33,9 @@ h1 {
   transition: background 0.5s;
   -webkit-transition: background 0.5s;
   -moz-transition: background 0.5s;
+}
+.squares-container .bottom {
+  margin-bottom: 3em;
 }
 
 body {
