--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,14 +1,17 @@
 body {
   margin: 0;
 
-  #header {
-    color: white;
-    text-align: center;
+  #header-container {
     background-color: $blue;
-    text-transform: uppercase;
+    color: white;
     margin: 0;
-    font-weight: 400;
+    text-align: center;
     padding: 1em 0;
+  }
+  #header {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 400;
   }
   #color-display {
     font-size: 150%;
