change subheader font-size on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -68,6 +68,9 @@ body #message {
 }
 
 @media screen and (max-width: 550px) {
+  body #header-container {
+    font-size: 1.2rem;
+  }
   body #color-display {
     font-size: 118%;
   }
