downsize subheader more

--- a/css/screen.css
+++ b/css/screen.css
@@ -46,7 +46,7 @@ body #header-container {
   color: white;
   margin: 0;
   text-align: center;
-  padding: 1em 0;
+  padding: 1em 1em;
 }
 body #header {
   text-align: center;
