--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,7 +6,7 @@ body {
     color: white;
     margin: 0;
     text-align: center;
-    padding: 1em 0;
+    padding: 1em 1em;
   }
   #header {
     text-align: center;
